--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,8 @@
 /node_modules
+/public/css
 /public/hot
+/public/js
+/public/mix-manifest.json
 /public/storage
 /storage/*.key
 /vendor
@@ -10,3 +13,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.idea
