テストコード書いた

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,31 +3,39 @@
 pu-v:
 	./vendor/bin/phpunit --version
 
-
-# m phpunit dir=public/phpunit/tests
 phpunit:
-	./vendor/bin/phpunit $(dir) --colors
+	./vendor/bin/phpunit $(path) --colors
 
 pu:
 	@make phpunit
 
 pu-d:
-	./vendor/bin/phpunit $(dir) --colors --debug
+	./vendor/bin/phpunit $(path) --colors --debug
 
-pu-ts:
+# --filter - PHPUnit公式
+# https://phpunit.readthedocs.io/ja/latest/textui.html?highlight=--filter
+# --filter <テストメソッド名>@<パラメータのパターン名>
+pu-f:
+	./vendor/bin/phpunit --filter $(regex)
+
+pu-t:
 	./vendor/bin/phpunit --testsuite $(name)
 
-# --filter <テストメソッド名>@<パラメータのパターン名>
-pu-ts-f:
-	./vendor/bin/phpunit --testsuite $(name) --filter $(method)
+pu-tf:
+	./vendor/bin/phpunit --testsuite $(name) --filter $(regex)
 
 pu-ls:
 	./vendor/bin/phpunit --list-suite
+
 
 # ==== Composer関連 ====
 
 dump-autoload:
 	composer dump-autoload
+
+clear-cache:
+	composer clear-cache
+
 
 # ==== Route List ====
 
