--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,5 +3,14 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3-node-browsers
+    working_directory: ~/laravel-ci-3/backend
     steps:
-      - run: echo "Hello World"  
+      - checkout
+        path: ~/laravel-ci-3
+      - run: sudo composer self-update -- 1
+      - run: composer install -n --prefer-dist
+      - run: npm ci
+      - run: npm run dev
+      - run:
+        name: php test
+        command: vender/bin/phpunit
