--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     working_directory: ~/laravel-ci-3/backend
     steps:
-      - checkout
+      - checkout:
         path: ~/laravel-ci-3
       - run: sudo composer self-update -- 1
       - run: composer install -n --prefer-dist
