--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout:
           path: ~/laravel-ci-3
-      - run: sudo composer self-update -- 1
+      - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
       - run: npm ci
       - run: npm run dev
