ciテスト 修正4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           path: ~/laravel-ci-3
       - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
       - run: npm run dev
       - run:
           name: php test
