--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout:
           path: ~/laravel-ci-3/backend
-      - run: sudo composer self-update --1
+      # - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
       - run: yarn install --frozen-lockfile
       - run: yarn run dev
