--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,15 @@ jobs:
     steps:
       - checkout:
           path: ~/laravel-ci-3
-      - run: sudo composer self-update --1
-      - run: composer install -n --prefer-dist
-      - run: yarn install --frozen-lockfile
-      - run: yarn run dev
       - run:
-          name: php test
-          command: ./vender/bin/phpunit
+          name: trial
+          command: |
+            pwd
+            ls
+      # - run: sudo composer self-update --1
+      # - run: composer install -n --prefer-dist
+      # - run: yarn install --frozen-lockfile
+      # - run: yarn run dev
+      # - run:
+      #     name: php test
+      #     command: ./vender/bin/phpunit
