ciテスト 実験4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
             ls
       - run:
           name: php test
-          command: vender/bin/phpunit
+          command: vendor/bin/phpunit
