--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,13 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3-node-browsers
+
     working_directory: ~/laravel-ci-3/backend
+
     steps:
       - checkout:
           path: ~/laravel-ci-3
+
       - run: sudo composer self-update --1
       - restore_cache:
           key: composer-v1-{{ checksum "composer.lock"}}
@@ -15,8 +18,21 @@ jobs:
           key: composer-v1-{{ checksum "composer.lock"}}
           paths:
             - vendor
-      - run: yarn install --frozen-lockfile
+
+      - restore_cache:
+          key: yarn-v1-{{ checksum "yarn.lock" }}
+      - run:
+          name: yarn install
+          command: |
+            if [ ! -d node_modules ]; then
+              yarn install --frozen-lockfile
+            fi
+      - save_cache:
+          key: yarn-v1-{{ checksum "yarn.lock" }}
+          paths:
+            - node_modules
       - run: yarn run dev
+
       - run:
           name: php test
           command: vendor/bin/phpunit
