--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,20 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3-node-browsers
+      - image: circleci/postgres:11.14-bullseye
+        environment:
+          POSTGRES_DB: laravel_ci
+          POSTGRES_USER: phper
+          POSTGRES_PASSWORD: secret
+          POSTGRES_INITDB_ARGS: --encoding=UTF-8
+    environment:
+      APP_ENV: testing
+      DB_CONNECTION: pgsql
+      DB_HOST: localhost
+      DB_PORT: 5432
+      B_DATABASE: laravel_ci
+      DB_USERNAME: phper
+      DB_PASSWORD: secret
     working_directory: ~/laravel-ci-3/backend
     steps:
       - checkout:
@@ -28,6 +42,13 @@ jobs:
           paths:
             - node_modules
       - run: yarn run dev
+      - run:
+          name: get ready for postgres
+          command: |
+            sudo apt-get update
+            sudo apt-get install libpq-dev
+            sudo docker-php-ext-install pdo_pgsql
+            dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
           name: php test
           command: vendor/bin/phpunit
