--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,13 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3-node-browsers
-      - image: circleci/postgres:11.14-bullseye
+      - image: circleci/postgres:11.6-alpine
+        # - image: circleci/postgres:11.14-bullseye
         environment:
           POSTGRES_DB: laravel_ci
           POSTGRES_USER: phper
           POSTGRES_PASSWORD: secret
-          POSTGRES_INITDB_ARGS: --encoding=UTF-8
+          # POSTGRES_INITDB_ARGS: --encoding=UTF-8
     environment:
       APP_ENV: testing
       DB_CONNECTION: pgsql
