--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
       - run:
           name: get ready for postgres
           command: |
+            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
             sudo apt-get update
             sudo apt-get install libpq-dev
             sudo docker-php-ext-install pdo_pgsql
@@ -53,3 +54,6 @@ jobs:
       - run:
           name: php test
           command: vendor/bin/phpunit
+# sudo gpg --recv-key 4EB27DB2A3B88B8B
+# sudo gpg -a --export 4EB27DB2A3B88B8B | sudo apt-key add -
+# sudo apt-get update --allow-releaseinfo-change
