--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -7,7 +7,7 @@ on:
 
 defaults:
   run:
-     working-directory: ./backend
+    working-directory: ./backend
 
 jobs:
   # 構文チェック
@@ -23,7 +23,7 @@ jobs:
       - name: lint
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: run: ./vendor/bin/phpcs --report=emacs --standard=phpcs.xml ./app | reviewdog -reporter=github-pr-review -efm='%f:%l:%c:%m'
+        run: ./vendor/bin/phpcs --report=emacs --standard=phpcs.xml ./app | reviewdog -reporter=github-pr-review -efm='%f:%l:%c:%m'
 
   # 静的解析
   analyse:
