--- a/backend/composer.json
+++ b/backend/composer.json
@@ -20,6 +20,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/larastan": "^1.0",
         "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "^3.7"
